2005-05-06  Jan Beulich  <jbeulich@novell.com>

	* gas/macros/badarg.s: Add check for bad qualifier specification.
	* gas/macros/badarg.l: Adjust.
	* gas/macros/vararg.[sd]: New.
	* gas/macros/macros.exp: Run new test.

2005-05-06  Jan Beulich  <jbeulich@novell.com>

	* gas/all/cond.s: Also test .ifb/.ifnb.
	* gas/all/cond.d: Adjust.

2005-05-06  Jan Beulich  <jbeulich@novell.com>

	* gas/macros/dot.s: Don't use pseudo-ops in first column.
	* gas/macros/dot.l: Match broader range of possible outputs.
	* gas/macros/purge.l: Likewise.
	* gas/macros/purge.s: Start generated macro names with an underscore.

2005-05-05  Paul Brook  <paul@codesourcery.com>

	* gas/i386/i386.exp: Don't run divide test on vxworks.

2005-05-05  Nick Clifton  <nickc@redhat.com>

	* Update the address and phone number of the FSF organization in
	the GPL notices in the following files:
	gas/all/itbl-test.c, gas/all/test-example.c, gas/all/test-gen.c,
	gas/arm/maverick.c, gas/cris/cris.exp, gas/hppa/basic/basic.exp,
	gas/hppa/parse/parse.exp, gas/hppa/reloc/reloc.exp,
	gas/hppa/unsorted/unsorted.exp, gas/m88k/m88k.exp,
	gas/mmix/mmix-err.exp, gas/mmix/mmix-list.exp, gas/mmix/mmix.exp,
	gas/mn10200/basic.exp, gas/mn10300/am33-2.c,
	gas/mn10300/basic.exp, gas/pdp11/opcode.s, gas/ppc/aix.exp,
	gas/sh/basic.exp, gas/sh/err.exp, gas/sh/arch/arch.exp,
	gas/sh/sh64/sh64.exp, gas/v850/basic.exp, lib/gas-defs.exp

2005-05-05  Mike Frysinger  <vapier@gentoo.org>

	* gas/sh/basic.exp: Replace linux-gnu with linux-* to allow for
	versions of Linux which do not use glibc.
	* gas/vax/vax.exp: Likewise.

2005-05-05  Paul Brook  <paul@codesourcery.com>

	* lib/gas-defs.exp (regexp_diff): Pass test if last line is "#...".

2005-04-26  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/all/assign.s: Make `x' and `y' global.

2005-04-25  Jan Beulich  <jbeulich@novell.com>

	* gas/macros/badarg.s: Add tests for collisions between/among macro
	parameters and local symbols.
	* gas/macros/badarg.l: Adjust.
