@@ -1,5 +1,12 @@
 2005-05-07  H.J. Lu  <hongjiu.lu@intel.com>
 
+	PR 843
+	* i386-dis.c (branch_v_mode): New.
+	(indirEv): Use branch_v_mode instead of v_mode.
+	(OP_E): Handle branch_v_mode.
+
+2005-05-07  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* d10v-dis.c (dis_2_short): Support 64bit host.
 
 2005-05-07  Nick Clifton  <nickc@redhat.com>
